@@ -1,2 +1,9 @@
 # JavaGUI
 Template and boiler plate code for a Java GUI Application
+
+# Commands 
+./gradlew run - run the application
+./gradlew build - build the jar file 
+
+# intellij configuration argument nad java -jar argument
+--module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml,javafx.swing,javafx.web 
